--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
 
         <activity
             android:name=".PoiListActivity"
+            android:parentActivityName=".PoiListActivity"
             android:launchMode="singleTop" />
     </application>
 
