--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,13 +25,15 @@
             android:value="1" />
         <meta-data
             android:name="AA_MODELS"
-            android:value="com.example.juh.poikeeper.model.PointOfInterest,                            com.example.juh.poikeeper.model.PoiTask,                            com.example.juh.poikeeper.model.PoiTaskItem" />
+            android:value="com.example.juh.poikeeper.model.PointOfInterest,
+                                       com.example.juh.poikeeper.model.PoiTask,
+                                       com.example.juh.poikeeper.model.PoiTaskItem" />
 
         <provider
             android:name="com.activeandroid.content.ContentProvider"
             android:authorities="com.example.juh.poikeeper"
             android:enabled="true"
-            android:exported="false"></provider>
+            android:exported="false" />
 
         <!-- ACTIVITIES DECLARATION -->
 
@@ -48,7 +50,10 @@
             android:name=".PoiListActivity"
             android:launchMode="singleTop"
             android:parentActivityName=".PoiListActivity" />
-        <activity android:name=".PoiDetailActivity"></activity>
+        <activity android:name=".PoiDetailActivity"
+            android:launchMode="standard" />
+        <activity android:name=".MapActivity"
+            android:launchMode="singleTop" />
     </application>
 
 </manifest>
