--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.13.0'
 
 }
